<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment"
    tools:context=".ui.activities.DetailsActivity"
    >


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kulim_park_bold_italic"
                    android:gravity="center_horizontal"
                    android:paddingLeft="8dp"
                    android:paddingTop="25dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:text="@string/Titulo" />

                <ImageView
                    android:id="@+id/tvImageUrl"
                    android:layout_width="match_parent"
                    android:layout_height="197dp"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kulim_park_italic"
                    android:paddingLeft="30dp"
                    android:text=""
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kulim_park_italic"
                    android:paddingLeft="30dp"
                    android:text="@string/FirstName"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvfirstName"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:fontFamily="@font/kulim_park"
                    android:paddingLeft="45dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="@string/FirstName" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="@string/LastName"
                    android:fontFamily="@font/kulim_park_italic"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvlastName"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:fontFamily="@font/kulim_park"
                    android:paddingLeft="45dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="@string/LastName" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:fontFamily="@font/kulim_park_italic"
                    android:text="@string/Fam"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tvFamily"
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:fontFamily="@font/kulim_park"
                    android:paddingLeft="45dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    tools:text="@string/Fam" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:fontFamily="@font/kulim_park_italic"
                    android:text="@string/Emblema"
                    android:textColor="@color/black" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/tvImage"
                    android:layout_width="match_parent"
                    android:layout_height="134dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    app:riv_corner_radius="10dp"
                    tools:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kulim_park_italic"
                    android:paddingLeft="30dp"
                    android:text=""
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pbConexion"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:indeterminateDrawable="@drawable/progress_anim"
        android:indeterminateDuration="1500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>